tests/trybuild/hidden-field.stderr
error[E0599]: no method named `name` found for struct `Crab` in the current scope
  --> tests/trybuild/hidden-field.rs:15:23
   |
 4 | struct Crab {
   | ----------- method `name` not found for this struct
...
15 |     assert_eq!(ferris.name().as_str(), "ferris");
   |                       ^^^^-- help: remove the arguments
   |                       |
   |                       field, not a method
